# tv-chart-api

./: .env-sample  .gitignore  .pre-commit-config.yaml  README.md  app.py  lefthook.toml  mise.toml  pyproject.toml  pyrightconfig.json  pytest.toml
migrations/: env.py
migrations/versions/: 2026-03-24_initial_schema_ab8ba13ef69f.py  2026-04-24_add_notes_and_channel_fields_5870ba72c5ff.py  2026-04-29_create_user_prefs_table_612f0efbd758.py
src/: app.py  app_config.py  create_app.py  exceptions.py  routes.py
src/db/: models.py  repositories.py
src/litestar_users_setup/: models.py  plugin.py
src/models/: prefs.py  search.py  show.py
src/scripts/: seed_db.py
src/services/: export.py  export_service.py  export_shows.py  import_service.py  import_shows.py  prefs_service.py  search.py  show.py  show_service.py
src/services/search/: __init__.py  exceptions.py  models.py  search_service.py
src/setup/litestar_users/: dtos.py  models.py  plugin.py  plugins.py  services.py  startup.py
src/tvmaze_api/: client.py  dtos.py  exceptions.py  models.py
src/tvmaze_api/dtos/: common_dtos.py  search_dtos.py
src/tvmaze_api/search/: dtos.py  models.py
src/tvmaze_api/utils/: html_sanitizer.py
tests/: conftest.py
tests/end_to_end/: conftest.py  test_authentication.py  test_import_export_routes.py  test_main_routes.py  test_rate_limiting.py  test_routes.py
tests/helpers/: sample_file_reader.py
tests/helpers/test_data/: db_setup.py  types.py  (+1 more)
tests/integration/: conftest.py  test_authentication.py  test_routes.py
tests/unit/: conftest.py  test_app_config.py
(+79 files in other folders)
