[project]
name = "tvchartapi"
version = "0.0.1"
description = "Backend API for TV chart tracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "html-sanitizer>=2.6.0",
    "httpx>=0.28.1",
    "litestar-users>=1.7.0",
    "litestar[standard,pydantic]>=2.18.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.3",
]
