[project]
name = "tvchartapi"
version = "0.0.1"
description = "Backend API for TV chart tracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "html-sanitizer>=2.6.0",
    "httpx>=0.28.1",
    "litestar-users>=1.7.0",
    "litestar[standard,pydantic,sqlalchemy]>=2.18.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "lefthook>=2.0.15",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
    "ruff>=0.14.3",
    "testcontainers[postgres]>=4.14.1",
]

[tool.mypy]
strict = true
disallow_any_generics = false
mypy_path = "src,tests"
explicit_package_bases = true

[tool.pytest]
minversion = "9.0"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--strict-markers", "-ra", "--color=yes", "-v"]
strict_xfail = true
